# vearch

./: .gitignore  .gitmodules  .travis.yml  ADOPTERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  README.third_party.md  README_ZH_CN.md  ROADMAP.md  VERSION  go.mod  go.sum  startup.go
engine/: .gitignore  AUTHORS  CMakeLists.txt  README.md
engine/benchs/: README.md
engine/c_api/: README.md  gamma_api.cc  gamma_api.h
engine/c_api/api_data/: gamma_batch_result.h  gamma_config.cc  gamma_config.h  gamma_cpp_api.cc  gamma_cpp_api.h  gamma_doc.cc  gamma_doc.h  gamma_docs.h  gamma_engine_status.cc  gamma_engine_status.h  gamma_memory_info.cc  gamma_request.cc  gamma_request.h  gamma_response.cc  gamma_response.h  gamma_table.cc  gamma_table.h
engine/cmake/Modules/: FindZFP.cmake
engine/common/: common_query_data.h  gamma_common_data.h
engine/gamma/: AUTHORS  CMakeLists.txt  LICENSE  README.md
engine/gamma/benchs/: README.md
engine/gamma/c_api/: README.md  gamma_api.cc  gamma_api.h
engine/gamma/cmake/: FindRocksDB.cmake
engine/gamma/idl/: build.sh
engine/gamma/index/: README.md  field_range_index.cc  field_range_index.h  gamma_index.h  gamma_index_factory.h  gamma_index_ivfpq.cc  gamma_index_ivfpq.h  range_query_result.cc  range_query_result.h
engine/gamma/profile/: README.md  profile.cc  profile.h
engine/gamma/realtime/: realtime_invert_index.cc  realtime_invert_index.h  realtime_mem_data.cc  realtime_mem_data.h
engine/gamma/release/: CMakeCache.txt  Makefile  cmake_install.cmake  libgamma.so.0.1
engine/gamma/search/: definition_list.h  gamma_api.cc  gamma_common_data.h  gamma_engine.cc  gamma_engine.h
engine/gamma/tests/: CMakeLists.txt  README.md  test.h  test_files.cc
engine/gamma/util/: bitmap.cc  bitmap.h  log_stream.h  online_logger.h  random.h  thread_util.h  timer.h  utils.cc  utils.h
engine/gamma/vector/: README.md  memory_raw_vector.cc  memory_raw_vector.h  mmap_raw_vector.cc  mmap_raw_vector.h  raw_vector.cc  raw_vector.h  raw_vector_factory.h  rocksdb_raw_vector.cc  rocksdb_raw_vector.h  vector_buffer_queue.cc  vector_buffer_queue.h  vector_file_mapper.cc  vector_file_mapper.h  vector_manager.cc  vector_manager.h
engine/go/examples/: test.go
engine/go/gamma/: batch_result.go  config.go  doc.go  docs.go  engine_status.go  gamma.go  request.go  response.go  table.go
engine/idl/: build.sh
engine/idl/fbs/: batch_result.fbs  config.fbs  doc.fbs  engine_status.fbs  request.fbs  table.fbs
engine/index/: gamma_index.cc  gamma_index.h  gamma_index_io.cc  reflector.cc  retrieval_model.h
engine/index/impl/: gamma_index_binary_ivf.cc  gamma_index_binary_ivf.h  gamma_index_flat.cc  gamma_index_flat.h  gamma_index_ivfflat.cc  gamma_index_ivfflat.h  gamma_index_ivfpq.cc  gamma_index_ivfpq.h  gamma_index_ivfpqfs.cc  gamma_index_ivfpqfs.h  gamma_scanner.h
engine/io/: async_flush.h  io_common.h  memory_raw_vector_io.cc  memory_raw_vector_io.h  mmap_raw_vector_io.cc  mmap_raw_vector_io.h  rocksdb_raw_vector_io.cc  rocksdb_raw_vector_io.h
engine/realtime/: realtime_invert_index.h  realtime_mem_data.cc  realtime_mem_data.h
engine/sdk/python/: .gitignore  README.md  build-wheels.sh  install-vearch.sh  setup.py
engine/search/: error_code.h  gamma_engine.cc  gamma_engine.h  gamma_table_io.cc
engine/storage/: async_writer.cc  async_writer.h  block.cc  block.h  lru_cache.h  migrate_data.cc  migrate_data.h  segment.cc  segment.h  storage_manager.cc  storage_manager.h  string_block.cc  string_block.h  table_block.cc  table_block.h  vector_block.cc  vector_block.h
engine/storage/compress/: compressor.h  compressor_zfp.h  compressor_zstd.h
engine/table/: README.md  field_range_index.cc  field_range_index.h  table.cc  table.h  table_define.h
engine/tests/: README.md  test.h  test_files.cc  test_index.cc  test_load_faiss.cc  test_lrucache.cc  test_raw_vector.cc  test_realtime_mem_data_relayout.cc  test_storage_compress.cc
engine/tools/: README.md  perf.cc
engine/util/: bitmap.h  log_stream.h  online_logger.h  thread_util.h  timer.h  utils.cc  utils.h
engine/vector/: README.md  gamma_zfp.cc  gamma_zfp.h  memory_raw_vector.cc  memory_raw_vector.h  mmap_raw_vector.cc  mmap_raw_vector.h  raw_vector.cc  raw_vector.h  raw_vector_common.h  raw_vector_factory.h  rocksdb_raw_vector.cc  rocksdb_raw_vector.h  rocksdb_wrapper.cc  rocksdb_wrapper.h  vector_manager.cc  vector_manager.h
internal/engine/: CMakeLists.txt  README.md
internal/engine/c_api/: README.md  gamma_api.cc  gamma_api.h
internal/engine/common/: common_query_data.h  definition_list.h  gamma_common_data.h
internal/engine/idl/: build.sh
internal/engine/index/: README.md  gamma_index_io.cc  gamma_index_io.h  index.cc  index.h  index_io.cc  index_io.h  index_model.h  reflector.h
internal/engine/io/: async_flush.h  memory_raw_vector_io.cc  memory_raw_vector_io.h  raw_vector_io.h  rocksdb_raw_vector_io.cc  rocksdb_raw_vector_io.h
internal/engine/memory/: memoryManager.cc  memoryManager.h
internal/engine/realtime/: realtime_invert_index.cc
internal/engine/search/: README.md  engine.cc  engine.h  gamma_engine.cc  gamma_engine.h  gamma_table_io.cc  gamma_table_io.h
internal/engine/storage/: storage_manager.cc  storage_manager.h
internal/engine/table/: bitmap_index.cc  bitmap_index.h  composite_index.cc  composite_index.h  field_range_index.cc  field_range_index.h  inverted_index.cc  inverted_index.h  range_query_result.cc  range_query_result.h  scalar_index.h  scalar_index_manager.cc  scalar_index_manager.h  scalar_index_result.h  scalar_index_types.cc  scalar_index_types.h  scalar_index_utils.cc  scalar_index_utils.h  table.cc  table.h  table_io.cc  table_io.h
internal/engine/tests/: CMakeLists.txt  demo_sift1m.cc  inital_coverage.sh  profile_10k.txt  report_coverage.sh  test.h  test_files.cc  test_gamma_index.cc  test_index.cc  test_load_faiss.cc  test_raw_vector.cc  test_realtime_mem_data.cc  test_realtime_mem_data_relayout.cc  test_request_context.cc  test_table.cc  test_utils.cc
internal/engine/tools/: perf.cc  (+2 more)
(+1226 files in other folders)
